// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Service Overview -> View should render empty message, when list is empty and historical data is found 1`] = `
NodeList [
  <tr
    class="euiTableRow"
  >
    <td
      class="euiTableRowCell euiTableRowCell--isMobileFullWidth"
      colspan="5"
    >
      <div
        class="euiTableCellContent euiTableCellContent--alignCenter"
      >
        <span
          class="euiTableCellContent__text"
        >
          <div
            class="euiEmptyPrompt"
          >
            <span
              class="euiTextColor euiTextColor--subdued"
            >
              <div
                class="euiTitle euiTitle--small"
              >
                No services found
              </div>
              <div
                class="euiSpacer euiSpacer--m"
              />
            </span>
          </div>
        </span>
      </div>
    </td>
  </tr>,
]
`;

exports[`Service Overview -> View should render getting started message, when list is empty and no historical data is found 1`] = `
NodeList [
  <tr
    class="euiTableRow"
  >
    <td
      class="euiTableRowCell euiTableRowCell--isMobileFullWidth"
      colspan="5"
    >
      <div
        class="euiTableCellContent euiTableCellContent--alignCenter"
      >
        <span
          class="euiTableCellContent__text"
        >
          <div
            class="euiEmptyPrompt"
          >
            <span
              class="euiTextColor euiTextColor--subdued"
            >
              <div
                class="euiTitle euiTitle--small"
              >
                Looks like you don't have any APM services installed. Let's add some!
              </div>
              <div
                class="euiSpacer euiSpacer--m"
              />
              <div
                class="euiText euiText--medium"
              >
                <p>
                  Upgrading from a pre-7.x version? Make sure you've also upgraded
              your APM Server instance(s) to at least 7.0.
                </p>
                <p>
                  You may also have old data that needs to be migrated.
                   
                  <a
                    class="euiLink euiLink--primary"
                    href="/basepath/app/kibana#/management/stack/upgrade_assistant"
                    rel="noreferrer"
                  >
                    Learn more by visiting the Kibana Upgrade Assistant
                  </a>
                  .
                </p>
              </div>
            </span>
            <div
              class="euiSpacer euiSpacer--l"
            />
            <div
              class="euiSpacer euiSpacer--s"
            />
            <a
              class="euiLink euiLink--primary"
              href="/basepath/app/home#/tutorial/apm"
              rel="noreferrer"
            >
              <button
                class="euiButton euiButton--primary euiButton--small euiButton--fill"
                type="button"
              >
                <span
                  class="euiButtonContent euiButton__content"
                >
                  <span
                    class="euiButtonContent__icon"
                    data-euiicon-type="help"
                  />
                  <span
                    class="euiButton__text"
                  >
                    Setup instructions
                  </span>
                </span>
              </button>
            </a>
          </div>
        </span>
      </div>
    </td>
  </tr>,
]
`;

exports[`Service Overview -> View should render services, when list is not empty 1`] = `
NodeList [
  .c1 {
  font-size: 16px;
  max-width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  width: 100%;
}

.c0 .apmServiceList__serviceNameTooltip {
  width: 100%;
}

.c0 .apmServiceList__serviceNameTooltip .apmServiceList__serviceNameContainer {
  width: calc(100% - 24px);
}

<tr
    class="euiTableRow"
  >
    <td
      class="euiTableRowCell"
      style="width: 96px;"
    >
      <div
        class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
      >
        Health
      </div>
      <div
        class="euiTableCellContent euiTableCellContent--overflowingContent"
      >
        <span
          class="euiBadge euiBadge--iconLeft"
          style="background-color: rgb(241, 216, 111); color: rgb(0, 0, 0);"
          title="Warning"
        >
          <span
            class="euiBadge__content"
          >
            <span
              class="euiBadge__text"
            >
              Warning
            </span>
          </span>
        </span>
      </div>
    </td>
    <td
      class="euiTableRowCell"
      style="width: 40%;"
    >
      <div
        class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
      >
        Name
      </div>
      <div
        class="euiTableCellContent euiTableCellContent--overflowingContent"
      >
        <span
          class="c0"
        >
          <span
            class="euiToolTipAnchor apmServiceList__serviceNameTooltip"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <img
                  alt="python"
                  height="24px"
                  src="test-file-stub"
                />
              </div>
              <div
                class="euiFlexItem apmServiceList__serviceNameContainer"
              >
                <a
                  class="euiLink euiLink--primary c1 eui-textTruncate"
                  href="/basepath/app/apm/services/My Python Service/transactions"
                  rel="noreferrer"
                >
                  My Python Service
                </a>
              </div>
            </div>
          </span>
        </span>
      </div>
    </td>
    <td
      class="euiTableRowCell"
      style="width: 160px;"
    >
      <div
        class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
      >
        Environment
      </div>
      <div
        class="euiTableCellContent euiTableCellContent--overflowingContent"
      >
        <span
          class="euiToolTipAnchor"
        >
          <span
            class="euiBadge euiBadge--iconLeft"
            style="background-color: rgb(211, 218, 230); color: rgb(0, 0, 0);"
            title="2 environments"
          >
            <span
              class="euiBadge__content"
            >
              <span
                class="euiBadge__text"
              >
                2 environments
              </span>
            </span>
          </span>
        </span>
      </div>
    </td>
    <td
      class="euiTableRowCell"
      style="width: 160px;"
    >
      <div
        class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
      >
        Avg. response time
      </div>
      <div
        class="euiTableCellContent euiTableCellContent--overflowingContent"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <span
                  color="subdued"
                  data-euiicon-type="visLine"
                />
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <div
                  class="euiText euiText--small"
                >
                  <div
                    class="euiTextColor euiTextColor--subdued"
                  >
                    N/A
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
            style="white-space: nowrap;"
          >
            0 ms
          </div>
        </div>
      </div>
    </td>
    <td
      class="euiTableRowCell"
      style="width: 160px;"
    >
      <div
        class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
      >
        Trans. per minute
      </div>
      <div
        class="euiTableCellContent euiTableCellContent--overflowingContent"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <span
                  color="subdued"
                  data-euiicon-type="visLine"
                />
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <div
                  class="euiText euiText--small"
                >
                  <div
                    class="euiTextColor euiTextColor--subdued"
                  >
                    N/A
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
            style="white-space: nowrap;"
          >
            0 tpm
          </div>
        </div>
      </div>
    </td>
    <td
      class="euiTableRowCell"
      style="width: 160px;"
    >
      <div
        class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
      >
        Error rate %
      </div>
      <div
        class="euiTableCellContent euiTableCellContent--overflowingContent"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <span
                  color="subdued"
                  data-euiicon-type="visLine"
                />
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <div
                  class="euiText euiText--small"
                >
                  <div
                    class="euiTextColor euiTextColor--subdued"
                  >
                    N/A
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
            style="white-space: nowrap;"
          />
        </div>
      </div>
    </td>
  </tr>,
  .c1 {
  font-size: 16px;
  max-width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  width: 100%;
}

.c0 .apmServiceList__serviceNameTooltip {
  width: 100%;
}

.c0 .apmServiceList__serviceNameTooltip .apmServiceList__serviceNameContainer {
  width: calc(100% - 24px);
}

<tr
    class="euiTableRow"
  >
    <td
      class="euiTableRowCell"
      style="width: 96px;"
    >
      <div
        class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
      >
        Health
      </div>
      <div
        class="euiTableCellContent euiTableCellContent--overflowingContent"
      >
        <span
          class="euiBadge euiBadge--iconLeft"
          style="background-color: rgb(152, 162, 179); color: rgb(0, 0, 0);"
          title="Unknown"
        >
          <span
            class="euiBadge__content"
          >
            <span
              class="euiBadge__text"
            >
              Unknown
            </span>
          </span>
        </span>
      </div>
    </td>
    <td
      class="euiTableRowCell"
      style="width: 40%;"
    >
      <div
        class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
      >
        Name
      </div>
      <div
        class="euiTableCellContent euiTableCellContent--overflowingContent"
      >
        <span
          class="c0"
        >
          <span
            class="euiToolTipAnchor apmServiceList__serviceNameTooltip"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <img
                  alt="go"
                  height="24px"
                  src="test-file-stub"
                />
              </div>
              <div
                class="euiFlexItem apmServiceList__serviceNameContainer"
              >
                <a
                  class="euiLink euiLink--primary c1 eui-textTruncate"
                  href="/basepath/app/apm/services/My Go Service/transactions"
                  rel="noreferrer"
                >
                  My Go Service
                </a>
              </div>
            </div>
          </span>
        </span>
      </div>
    </td>
    <td
      class="euiTableRowCell"
      style="width: 160px;"
    >
      <div
        class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
      >
        Environment
      </div>
      <div
        class="euiTableCellContent euiTableCellContent--overflowingContent"
      />
    </td>
    <td
      class="euiTableRowCell"
      style="width: 160px;"
    >
      <div
        class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
      >
        Avg. response time
      </div>
      <div
        class="euiTableCellContent euiTableCellContent--overflowingContent"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <span
                  color="subdued"
                  data-euiicon-type="visLine"
                />
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <div
                  class="euiText euiText--small"
                >
                  <div
                    class="euiTextColor euiTextColor--subdued"
                  >
                    N/A
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
            style="white-space: nowrap;"
          >
            0 ms
          </div>
        </div>
      </div>
    </td>
    <td
      class="euiTableRowCell"
      style="width: 160px;"
    >
      <div
        class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
      >
        Trans. per minute
      </div>
      <div
        class="euiTableCellContent euiTableCellContent--overflowingContent"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <span
                  color="subdued"
                  data-euiicon-type="visLine"
                />
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <div
                  class="euiText euiText--small"
                >
                  <div
                    class="euiTextColor euiTextColor--subdued"
                  >
                    N/A
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
            style="white-space: nowrap;"
          >
            0 tpm
          </div>
        </div>
      </div>
    </td>
    <td
      class="euiTableRowCell"
      style="width: 160px;"
    >
      <div
        class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
      >
        Error rate %
      </div>
      <div
        class="euiTableCellContent euiTableCellContent--overflowingContent"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <span
                  color="subdued"
                  data-euiicon-type="visLine"
                />
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <div
                  class="euiText euiText--small"
                >
                  <div
                    class="euiTextColor euiTextColor--subdued"
                  >
                    N/A
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
            style="white-space: nowrap;"
          />
        </div>
      </div>
    </td>
  </tr>,
]
`;
